--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,76 @@
+html {
+    font-size: 62.5%;    
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to bottom, rgba(255,255,255,0.7), rgba(255,255,255,0.7)), url(./background-219668.jpg);
+  font-family: 'Open Sans', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+h1 {
+  font-family: 'Rock Salt', cursive;
+  font-size: 8.5rem;
+  margin-bottom: 0;
+}
+
+h2 {
+  font-size: 3.2rem;
+}
+
+h3 {
+  font-size: 2.2rem;
+}
+
+p {
+  font-size: 1.8rem;
+}
+
+.label-text {
+  font-size: 1.8rem;
+  font-weight: 700;
+
+}
+
+.search-field {
+  width: 30%;
+  padding: 7px 10px;
+  border-radius: 15px;
+  border: none;
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+.button {
+  background: #00b4b3;
+  border: none;
+  border-radius: 15px;
+  padding: 7px 10px;
+  margin-left: 5px;
+  width: 12%;
+  font-size: 1.3rem;
+}
+
+.save-stub {
+  width: 30%;
+}
+
+.event-card{
+  width: 100%;
+  margin: 2% auto;
+  background: url(./ticket-303706_640.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 300px;
+}
+
+.event-card-wrapper {
+  padding: 30px 0;
 }
