--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+
+
+
 html {
     font-size: 62.5%;    
 }
@@ -9,20 +18,30 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+.wrapper {
+   max-width: 1080px;
+   width: 80%;
+   margin: 0 auto;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 
+h1, h2, h3, p {
+  color: #282a2d;
+}
+
 h1 {
   font-family: 'Rock Salt', cursive;
-  font-size: 8.5rem;
+  font-size: 9rem;
   margin-bottom: 0;
 }
 
 h2 {
-  font-size: 3.5rem;
+  font-size: 3.4rem;
 }
 
 h3 {
@@ -36,29 +55,48 @@ p {
 .label-text {
   font-size: 1.8rem;
   font-weight: 700;
-
 }
 
 .search-field {
-  width: 30%;
+  width: 45%;
   padding: 10px 10px;
   border-radius: 15px;
   border: none;
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
+  font-style: italic;
+  border: 5px solid #00b4b3;
+  box-shadow: 0px 10px 20px -5px rgba(0,0,0,.8); 
 }
 
 .button {
   background: #00b4b3;
   border: none;
   border-radius: 15px;
-  padding: 10px 10px;
-  margin-left: 5px;
-  width: 15%;
-  font-size: 1.2rem;
+  padding: 14px 15px;
+  margin-left: 10px;
+  width: 25%;
+  font-size: 1.5rem;
   font-weight: 700;
   letter-spacing: 1.5px;
+  box-shadow: 0px 10px 20px -5px rgba(0,0,0,.8); 
 }
+
+@media(max-width: 982px) {
+  .search-field{
+    width: 60%;
+  }
+  .button {
+    width: 35%;
+  }
+}
+
+.button:hover,
+.button:focus {
+  color: #FAFAFA;
+}
+
+
 
 .save-stub {
   width: 30%;
@@ -75,4 +113,23 @@ p {
 
 .event-card-wrapper {
   padding: 30px 0;
+}
+
+footer {
+  margin-top: 20%;
+  background: #282a2d;
+  padding: 20px 0;
+}
+
+footer p {
+  color: #FAFAFA;
+  font-size: 1.3rem;
+  font-family: 'Rock Salt', cursive;
+  letter-spacing: 2px;
+}
+
+footer a {
+  text-decoration: none;
+  color: #00b4b3;
+
 }
