--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 
-
+/* GENERAL/LAYOUT STYLES ----- */
 
 html {
     font-size: 62.5%;    
@@ -18,18 +18,31 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+
 .wrapper {
    max-width: 1080px;
    width: 80%;
    margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+@media(max-width: 788px) {
+  .wrapper {
+    width: 90%;
+  }
+}
+
+@media(max-width: 699px) {
+  .wrapper {
+    width: 100%;
+  }
+}
+
+img {
+  max-width: 100%;
 }
 
 
+/* TYPOGRAPHY ------------- */
 h1, h2, h3, p {
   color: #282a2d;
 }
@@ -91,13 +104,86 @@ p {
   }
 }
 
+@media(max-width: 804px) {
+
+  h1 {
+    font-size: 8rem;
+  }
+
+}
+
 .button:hover,
 .button:focus {
   color: #FAFAFA;
 }
 
+@media(max-width: 699px) {
+  h1, h2, h3, form {
+    padding: 0 20px;
+  }
+}
+
+@media(max-width: 635px) {
+  h1 {
+    font-size: 7.5rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+
+  .search-field,
+  .button {
+    width: 100%;
+    margin: 2% 0;
+  }
+
+}
+
+@media(max-width: 576px) {
+  h1 {
+    font-size: 6.6rem;
+  }
+  h2 {
+    font-size: 2.6rem;
+  }
+}
+
+@media(max-width: 511px) {
+  h1 {
+    font-size: 5rem;
+  }
+
+  h2 {
+    font-size: 2.2rem;
+  }  
+}
+
+@media(max-width: 397px) {
+  h1 {
+    font-size: 4.1rem;
+  }
+  
+}
+
+@media(max-width: 333px) {
+  h1 {
+    font-size: 3.7rem;
+  }
+  
+}
 
 
+
+
+
+
+
+/* SEARCH RESULTS SECTION ----- */
 .save-stub {
   width: 30%;
 }
@@ -109,11 +195,18 @@ p {
   background-repeat: no-repeat;
   background-position: center;
   height: 300px;
+  
 }
 
 .event-card-wrapper {
-  padding: 30px 0;
+  padding: 30px;
 }
+
+
+
+
+
+/* FOOTER SECTION ----------- */
 
 footer {
   margin-top: 20%;
